<resources>
    <!--common-->
    <string name="app_name">Skinbutler</string>
    <string name="ok">ok</string>
    <string name="error">오류</string>
    <string name="confirm">확인</string>
    <string name="inputName">닉네임을 입력해주세요.</string>
    <string name="inputPassword">비밀번호를 입력해주세요.</string>
    <string name="confirmPassword">비밀번호를 확인해주세요.</string>
    <string name="confirmId">아이디를 확인해주세요.</string>

    <!-- skin color name -->
    <string name="light_spring">봄 라이트</string>
    <string name="spring_bright">봄 브라이트</string>
    <string name="summer_light">여름 라이트</string>
    <string name="summer_mute">여름 뮤트</string>
    <string name="deep_autumn">가을 딥</string>
    <string name="fall_mute">가을 뮤트</string>
    <string name="winter_deep">겨울 딥</string>
    <string name="winter_bright">겨울 브라이트</string>

    <!--dialog-->
    <string name="skipAlert">피부톤에 맞는\n화장품 추천이 불가능해요.</string>
    <string name="cancel">취소</string>
    <string name="fine">괜찮아요</string>

    <!-- action bar -->
    <string name="guideTitle">피부톤 측정</string>

    <!--sign up -->
    <string name="nickname">닉네임</string>
    <string name="passwordConfirm">비밀번호 확인</string>
    <string name="birthday">생년월일</string>x
    <string name="sex">성별</string>
    <string name="skinType">피부타입</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="dryness">건성</string>
    <string name="neutral">중성</string>
    <string name="oilly">지성</string>
    <string name="compound">복합성</string>
    <string name="sensivitity">민감성</string>
    <string name="signUpComplete">회원가입 완료</string>

    <string name="month1">January</string>
    <string name="month2">February</string>
    <string name="month3">March</string>
    <string name="month4">April</string>
    <string name="month5">May</string>
    <string name="month6">June</string>
    <string name="month7">July</string>
    <string name="month8">August</string>
    <string name="month9">September</string>
    <string name="month10">October</string>
    <string name="month11">November</string>
    <string name="month12">December</string>

    <!--login-->
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="kakao">카카오톡으로 시작하기</string>
    <string name="facebook">페이스북으로 시작하기</string>
    <string name="noAccount">계정이 없으세요?</string>
    <string name="signUp">회원가입</string>
    <string name="inputId">아이디를 입력해주세요.</string>
    <string name="inputPw">비밀번호를 입력해주세요.</string>
    <string name="wait">잠시만 기다려주세요...</string>

    <!--guide-->
    <string name="guide1">스킨버틀러 스킨지를 준비해주세요.</string>
    <string name="guide2">광대에 스킨지 구멍을 정확히 갖다 데어주세요.</string>
    <string name="guide3">화면의 가이드에 맞춰 촬영해주세요.</string>
    <string name="notice1">* 사진은 일체 전송되지 않고 피부톤만을 저장합니다.</string>
    <string name="notice2">* 스킨톤지에 그림자가 지지 않도록 주의해주세요.</string>
    <string name="skip">건너뛰기</string>
    <string name="start">시작하기</string>
    <string name="err_camera_storage_permission">다음 과정 진행을 위해서는 카메라와 저장 공간 권한이 필요해요!</string>

    <!-- skin color info -->
    <string name="light_spring_info">봄 라이트 톤은 채도가 낮은 색이 어울리는 웜톤이에요.\n\n 대표 연예인은 아이유, 수지, 설리, 송혜교 등이 있어요\n\n 봄 라이트 톤은 채도가 낮은 색 위주로 화장을 해야해요.\n\n 음영화장이나 진한 눈 화장은 어울리지 않고\n\n 눈 화장은 최대한 줄이고 속눈썹을 신경써서 올리고 립 화장에 집중해야 훨씬 자연스러워요\n\n 립스틱 색은 채도가 높지않고 명도가 높은 색상이 어울려요.\n\n 블러셔는 최대한 생략하는 것이 좋으나 흰색이 섞인 핑크가 어울리는 편이에요!\n\n</string>
    <string name="spring_bright_info">봄 브라이트는 채도가 높은 색이 어울리는 웜톤이에요. \n\n 대표 연예인은 조이, 유빈, 제시카 등이 있어요 \n\n  봄 브라이트톤은 눈 쪽에서 색조를 빼고 아이라이너 마스카라로 눈을 또렷하게 만들어야해요.\n\n 아이라인에 색감을 더하지 않았으므로 블러셔는 조금 강조해도 된답니다. \n\n 봄 브라이트의 글리터 펄은 클수록 좋아요.</string>
    <string name="summer_light_info">여름 라이트는 채도가 낮고 명도가 높은 푸른색 계열의 색이 어울리는 쿨톤이에요. \n\n 대표 연예인은 태연, 이영애, 손예 등이 있어요. \n\n 여름 라이트는 갈색기가 없는 흑색 머리색이 어울려요.  \n\n 섀도우를 강하게 하면 답답하고 더워보일 수 있으니 조심해야해요.  \n\n 립 컬러 역시 너무 진한 컬러는 피해야 합니다.</string>
    <string name="summer_mute_info">여름 뮤트는 채도가 낮고 명도가 매우 낮은 회색빛 계열의 색이 어울리는 쿨톤이에요.  \n\n 대표 연예인은 김연아, 정채연 등이 있어요.  \n\n 여름 뮤트는 갈색기가 없는 흑색 머리색이 어율려요.  \n\n 정돈되고 깨끗한 피부 표현이 중요하며 속눈썹과 아이라인을 강조하는게 좋아요. \n\n 립 컬러는 핑크톤의 색상이 어울려요.</string>
    <string name="deep_autumn_info">가을 딥 톤은 명도가 낮은 진한 색이 어울리는 웜톤이에요.\n\n\n 또 이름에서 처럼 가을 단풍색과 관련된 색조가 어울려요.\n\n\n 대표 연예인은 하니, 김효진, 김유정 등이 있어요\n\n\n 음영화장이나 진하고 펄이 들어간 눈 화장이 어울려요.\n\n\n 아이라인은 검은색보다 갈색이 어울리며 블러셔는 필수에요.\n\n\n 립스틱 색은 채도가 높지않고 명도가 높은 색상이 어울려요.\n\n\n 흰색이 포함된 핑크는 절대 금물이에요!\n\n</string>
    <string name="fall_mute_info">가을 뮤트 톤은 명도와 채도 모두 낮은 진한 색이 어울리는 웜톤이에요.\n\n\n 대체로 노란끼가 없는 색상의 화장품이 어울려요.\n\n\n 대표 연예인은 크리스탈, 미란다 커 등이 있어요\n\n\n 음영화장이나 진하고 펄이 들어간 눈 화장이 어울려요.\n\n\n 아이라인은 검은색보다 갈색이 어울리며 블러셔는 필수에요.\n\n\n 립스틱 색은 채도가 높지않고 명도가 높은 색상이 어울려요.\n\n\n 흰색이 포함된 핑크는 절대 금물이에요!\n\n</string>
    <string name="winter_deep_info">겨울 딥톤은 저~중 채도, 저명도의 어두운 색상이 어울리는 쿨톤이에요.\n\n 대표 연예인으로는 김혜수 등이 있어요. \n\n 겨울 딥톤은 대체로 어두운 색상이 어울리는데 흑발, 그레이 렌즈, 어두운 립 컬러등이 베스트 제품이에요.\n\n 깨끗한 피부표현이 중요하며 노란끼, 주황끼가 섞인 표현은 피해야 합니다. \n\n 립은 최대한 진한 색으로 선택하는 것이 좋아요.</string>
    <string name="winter_bright_info">겨울 브라이트는 고채도, 중명도의 색상이 어울리는 쿨톤이에요.\n\n 대표 연예인으로는 이효리 등이 있어요.\n\n 겨울 브라이트 톤은 대비가 이루어지는 블랙/화이트 같은 색상이 어울려요.\n\n 회색, 흰색끼가 섞인 제품은 피해야 하며 가능한 흑발, 검은색 속눈썹, 검은색 아이라인을 추천해요. \n\n </string>
</resources>
