<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"/>

    <ImageView
        android:id="@+id/iconIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/it_tone_purple"
        android:layout_gravity="center_horizontal"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="27"/>


    <EditText
        android:id="@+id/idET"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_weight="36"
        android:background="@drawable/gray_line_box"
        android:layout_gravity="center_horizontal"
        android:hint="@string/id"
        android:paddingLeft="10dp"
        android:textSize="12sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"/>

    <EditText
        android:id="@+id/pwET"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_weight="36"
        android:background="@drawable/gray_line_box"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        android:paddingLeft="10dp"
        android:textSize="12sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="24"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="#000000"
        android:layout_gravity="center_horizontal"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"/>

    <Button
        android:id="@+id/kakaoBtn"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:text="@string/kakao"
        android:textSize="16sp"
        android:textColor="@color/kakaoString"
        android:gravity="center"
        android:background="@color/kakaoBack"
        android:layout_gravity="center_horizontal"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"/>

    <Button
        android:id="@+id/facebookBtn"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:text="@string/facebook"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@color/facebook"
        android:layout_gravity="center_horizontal"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noAccount"
            android:textColor="#363636"
            android:textSize="12sp"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:id="@+id/goSignUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="120"/>


</LinearLayout>
