<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/action_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:scaleType="centerCrop"
        app:riv_corner_radius="30dip"
        app:riv_mutate_background="true"
        app:riv_oval="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_weight="36"
        android:background="@drawable/gray_line_box"
        android:hint="@string/nickname"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12" />

    <EditText
        android:id="@+id/edit_pw"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_weight="36"
        android:background="@drawable/gray_line_box"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12" />

    <EditText
        android:id="@+id/edit_pw_confirm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_weight="36"
        android:background="@drawable/gray_line_box"
        android:hint="@string/passwordConfirm"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/birthday"
        android:textColor="@color/textBlack"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_weight="36"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="132">

            <Spinner
                android:id="@+id/spinner_month"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gray_line_box"
                android:entries="@array/month_list"
                android:textSize="12sp"></Spinner>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="8dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="13dp"
                android:background="@drawable/ic_dropdown" />

        </FrameLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="84">

            <Spinner
                android:id="@+id/spinner_day"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gray_line_box"
                android:textSize="12sp"></Spinner>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="8dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="13dp"
                android:background="@drawable/ic_dropdown" />

        </FrameLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="108">

            <Spinner
                android:id="@+id/spinner_year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gray_line_box"
                android:textSize="12sp"></Spinner>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="8dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="13dp"
                android:background="@drawable/ic_dropdown" />

        </FrameLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/sex"
        android:textColor="@color/textBlack"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <RadioGroup
        android:id="@+id/radio_gender"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="18dp"
        android:layout_weight="36"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_male"
            android:layout_width="75dp"
            android:layout_height="36dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/black_oval_btn_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/male"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/btn_female"
            android:layout_width="75dp"
            android:layout_height="36dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/white_oval_btn_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/female"
            android:textSize="10sp" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/skinType"
        android:textColor="@color/textBlack"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <RadioGroup
        android:id="@+id/radio_skin_type"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_weight="84"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/btn_dryness"
                android:layout_width="75dp"
                android:layout_height="36dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/black_oval_btn_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/dryness"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/btn_neutral"
                android:layout_width="75dp"
                android:layout_height="36dp"
                android:layout_marginRight="12dp"
                android:layout_toRightOf="@id/btn_dryness"
                android:background="@drawable/white_oval_btn_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/neutral"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/btn_oilly"
                android:layout_width="75dp"
                android:layout_height="36dp"
                android:layout_marginRight="12dp"
                android:layout_toRightOf="@id/btn_neutral"
                android:background="@drawable/white_oval_btn_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/oilly"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/btn_compound"
                android:layout_width="75dp"
                android:layout_height="36dp"
                android:layout_marginRight="12dp"
                android:layout_toRightOf="@id/btn_oilly"
                android:background="@drawable/white_oval_btn_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/compound"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/btn_sensitivity"
                android:layout_width="75dp"
                android:layout_height="36dp"
                android:layout_below="@id/btn_dryness"
                android:layout_marginRight="12dp"
                android:background="@drawable/white_oval_btn_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/sensivitity"
                android:textSize="10sp" />
        </RelativeLayout>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:background="#2a2a2a"
        android:text="@string/signUpComplete"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>
