<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <include
        layout="@layout/action_bar"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/skintone_pic"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/guide_text_line_box"
        android:orientation="vertical"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/number_1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide1"
                android:textSize="12sp"
                android:textColor="@color/textBlack"
                android:layout_marginLeft="6dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/number_2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide2"
                android:textSize="12sp"
                android:textColor="@color/textBlack"
                android:layout_marginLeft="6dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/number_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide3"
                android:textSize="12sp"
                android:textColor="@color/textBlack"
                android:layout_marginLeft="6dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/notice1"
        android:textColor="@color/notice"
        android:textSize="12sp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/notice2"
        android:textSize="12sp"
        android:textColor="@color/notice"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/skipBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#b3b3b3"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/startBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2a2a2a"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

    </LinearLayout>

</LinearLayout>